delete past files

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background: url('C:\Users\eilat\Pictures\chrome_wallpaper.jpg') center/cover no-repeat;
+            background: url('\chrome_wallpaper.jpg') center/cover no-repeat;
             height: 100vh;
             display: flex;
             align-items: center;
@@ -25,7 +25,7 @@
         }
         .search-button {
             padding: 10px;
-            background-color: #4CAF50;
+            background-color: #167c6f;
             color: white;
             border: none;
             cursor: pointer;
