--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!-- index.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -10,13 +9,47 @@
     <link href="styles/general.css" rel="stylesheet">
 </head>
 <body>
-    <form action="https://www.google.com/search" method="GET" target="_blank">
-        <div class="searchbar">
-            <input type="text" class="searchbar__input" name="q" placeholder="This is Balmas!">
-            <button type="submit" class="searchbar__button">
-                <i class="material-icons">search</i>
-            </button>
+    <!-- Container for search bar, button, and shortcut icons -->
+    <div class="search-container">
+         <!-- Image on top of the search bar -->
+         <form class="google-logo">
+         <div class="top-image-google">
+            <a href="https://www.google.com" target="_blank">
+            <img src="channel-pictures/google-white-logo.png" alt="Top Image">
         </div>
-    </form>
+        </form>
+        
+        <!-- Form for Google search -->
+        <form action="https://www.google.com/search" method="GET" target="_blank" class="search-form">
+            <!-- Search bar and button section -->
+            <div class="searchbar">
+                <input type="text" class="searchbar__input" name="q" placeholder="This is Balmas!">
+                <button type="submit" class="searchbar__button">
+                    <i class="material-icons">search</i>
+                </button>
+            </div>
+        </form>
+
+        <!-- Shortcut icons section -->
+        <div class="shortcut-icons">
+            <!-- YouTube shortcut -->
+            <a href="https://www.youtube.com" target="_blank">
+                <img src="channel-pictures/youtube_icon.png" alt="YouTube">
+            </a>
+            <!-- ChatGPT shortcut -->
+            <a href="https://www.chatgpt.com" target="_blank">
+                <img src="channel-pictures/chatgpt_icon.png" alt="ChatGPT">
+            </a>
+            <!-- WhatsApp shortcut -->
+            <a href="https://api.whatsapp.com/send?phone=YOUR_PHONE_NUMBER" target="_blank">
+                <img src="channel-pictures/whatsapp_icon.png" alt="WhatsApp">
+            </a>
+            <!-- Spotify shortcut -->
+            <a href="https://www.spotify.com" target="_blank">
+                <img src="channel-pictures/spotify_icon.png" alt="Spotify">
+            </a>
+            <!-- Add more shortcut icons as needed -->
+        </div>
+    </div>
 </body>
 </html>
